[package]
name = "uefi_test"
version = "0.1.0"
authors = ["Nick Ammann"]
edition = "2018"

[dependencies]
uefi = {version = "0.11.0", features = ["exts"]}
uefi-services = "0.8.0"
uefi-macros = "0.3.3"

log = { version = "0.4.11", default-features = false }

# When building using Cargo's `build-std` feature, the `mem` feature of `compiler-builtins`
# does not automatically get enabled. Therefore, we have to manually add support for
# the memory functions.
rlibc = "1.0.0"
